Mon Jun 07 20:42:04 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* config/dir.cf: 
	* config/global.cf: 
	* config/install.cf: 
	Made a mistake in my previous commit. This one works.

Mon Jun 07 20:20:32 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* config/bin.cf: 
	* config/c.cf: 
	* config/dir.cf: 
	* config/global.cf: 
	* config/install.cf: 
	* config/lib.cf: 
	* config/test.cf: 
	* config/win32/gcc.cf: 
	* config/win32/global.cf: 
	* config/win32/msvc.cf: 
	* config/win32/rules.cf: 
	Updated rules so they work under WinNT CMD.EXE without any Unix
	utilities installed.
	
19990607-19:45 EDT David G. Holm <dholm@jsd-llc.com>
  * include/extend.h
    - Moved "#include <limits.h>" to include/types.h
    - Removed "#define FILE" and "#undef FILE", which are no longer
      needed, because HARBOUR FILE() was renamed to HARBOUR HB_FILE()
      some time ago.
  * include/types.h
    - Moved "#include <limits.h>" from include/extend.h in order to
      avoid having to require that extend.h be included before set.h
  * source/rtl/dates.c
    - HARBOUR SECONDS() and support module hb_seconds() courtesy of
      Jose Lalin <dezac@corevia.com>. I removed the use of clock()
      from hb_time(), because clock() returns the number of clock
      ticks since the program started, which has no relationship to
      when the seconds of the real time clock roll over. This means
      that SECONDS() will always return whole seconds instead of
      seconds and hundredths. I also provided an alternate hb_seconds
      implementation for DOS platforms using gettime() instead of
      time() and localtime(), because gettime() includes 1/100ths.
  * source/rtl/files.c
    - Don't "#include <mingw32/share.h>" if compiling with DJGPP.
  + tests/working/seconds.prg
    - New test program for SECONDS().

19990607-20:30 CET Eddie Runia
   * makefile.b32
     change little bug (hb.c)

Mon Jun 07 12:58:17 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>
